docs/cs/cloud/config/proxy/envoy/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    listener_filters:
    - name: "envoy.filters.listener.tls_inspector"
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    filter_chains:
    - filter_chain_match:
        server_names:
        - api.univertech.cn
      filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: user
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: [h2,http/1.1]
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/tls/api.univertech.cn.pem
              private_key:
                filename: /etc/envoy/tls/api.univertech.cn.key
    
    - filter_chain_match:
        server_names:
        - domain3.example.com
      filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: proxy-domain3
          stat_prefix: user

  clusters:
  - name: user
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: user
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.21.0.6
                port_value: 8000
  - name: user
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: user
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 172.21.0.6
                port_value: 8000
