docs/cs/cloud/config/proxy/envoy/rewrite.yml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: app
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: service-https
                  host_rewrite_literal: www.envoyproxy.io
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIIF+TCCBOGgAwIBAgIQCWYvALc8TD0U4pAUvO3FgDANBgkqhkiG9w0BAQsFADBu
[...]
                  -----END CERTIFICATE-----
                  -----BEGIN CERTIFICATE-----
                  MIIEqjCCA5KgAwIBAgIQAnmsRYvBskWr+YBTzSybsTANBgkqhkiG9w0BAQsFADBh
[...]
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN RSA PRIVATE KEY-----
                  MIIEpAIBAAKCAQEAxBie786WpeKeR6ZuZvp/+miNZx4u2qWWq+wS2qJwa5FTeSRK
[...]
                  bD4Ez+G9CYX3och/sAs7ozXH6RaZoCpieHGuGut8N/4Zt4F3L9EKmw==
                  -----END RSA PRIVATE KEY-----

  clusters:
  - name: service-https
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY  
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service-https
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.envoyproxy.io
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.envoyproxy.io
